[project]
name = "langflow-cli"
version = "0.1.2"
description = "CLI tool for managing Langflow environments and resources"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "PyGithub>=2.0.0",
]
authors = [
    {name = "Samuel Matioli", email = "smatioli@gmail.com"}
]
license = {text = "MIT"}
keywords = [
    "langflow",
    "cli",
    "automation",
    "api",
    "workflow",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
langflow-cli = "langflow_cli.cli:main"
lf-cli = "langflow_cli.cli:main"

[project.urls]
Homepage = "https://github.com/smatiolids/langflow-cli"
Documentation = "https://github.com/smatiolids/langflow-cli#readme"
Repository = "https://github.com/smatiolids/langflow-cli"
Issues = "https://github.com/smatiolids/langflow-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

